fix Bug widget spacing issue

--- a/mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
@@ -62,6 +62,10 @@ a {
 	text-decoration: none;
 }
 
+.mycollab .v-richtextarea {
+	border: 1px solid #CFCFCF;
+}
+
 .v-button,.v-button-caption {
 	text-shadow: none;
 }
@@ -3280,7 +3284,22 @@ div.v-button-link.xbreadcrumbbutton .v-button-wrap {
 	border-width: 0px 1px 1px 1px;
 	border-style: solid;
 	border-color: #CFCFCF;
-	padding: 3px 5px 0px;
+}
+
+.widget-row.v-margin-top {
+	padding-top: 3px;
+}
+
+.widget-row.v-margin-right {
+	padding-right: 5px;
+}
+
+.widget-row.v-margin-bottom {
+	padding-bottom: 3px;
+}
+
+.widget-row.v-margin-left {
+	padding-left: 5px;
 }
 
 .widget-row.odd {
